# object-tracker-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: athena-setup.md  aws-iam-setup.md
infra/iam/: pipeline-policy.json
src/object_tracker_pipeline/: __init__.py  ddl.py  keys.py  klv.py  query.py  state.py  sync.py  transform.py
tests/: conftest.py  test_ddl.py  test_keys.py  test_klv.py  test_query.py  test_smoke.py  test_state.py  test_sync.py  test_transform.py
tests/fixtures/: generate_fixtures.py  multi_detection_clip.expected.json  multi_detection_clip.klv  single_detection.expected.json  single_detection.klv
