[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "object-tracker-pipeline"
version = "0.1.0"
description = "ELT pipeline: unpack object-tracker KLV clip metadata from S3 into a queryable Parquet catalog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
